--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,16 @@
   padding: 0;
 }
 
+:root {
+  --neutral-light-300: #dedede;
+  --neutral-dark-600: #9F9F9F;
+  --neutral-dark-700: #7d7d7d;
+  --neutral-dark-800: #4B4B4B;
+}
+
 body {
-  font-family: 'Segoe UI', Arial, sans-serif;
+  font-family: Roboto, 'Segoe UI', Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.4;
   color: #444;
   background: #fff;
@@ -33,31 +41,39 @@ body {
   width: 100%;
   margin-bottom: 20px;
   display: flex;
-  border-radius: calc(0.5 * 100px);
-  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.38);
-  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid var(--neutral-light-300);
+  border-radius: 6px;
+  padding: 12px 13px;
+  gap: 8px;
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+  background-size: 20px 20px;
+}
+
+.icon-search {
+  background-image: url(./assets/search.svg);
+}
+
+.icon-loading {
+  background-image: url(./assets/loading.svg);
 }
 
 .input-text {
   font-size: 1rem;
   font-weight: 400;
-  width: 85%;
-  padding-right: 5px;
-  padding-left: 10px;
-  border-radius: calc(0.5 * 100px);
+  flex: 1;
   background-color: transparent;
 }
 
-.input-submit {
-  background: transparent;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
+.input-text::placeholder {
+  color: var(--neutral-dark-600);
 }
 
-.input-text,
-.input-submit {
-  height: 45px;
+.input-text {
   outline: none;
   border: none;
 }
@@ -113,6 +129,7 @@ body {
   font-size: 1.2rem;
   letter-spacing: 1.5px;
 }
+
 .item:hover {
   opacity: 0.85;
   background-color: #eaeaea;
@@ -139,6 +156,7 @@ body {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
