--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,13 @@
 }
 
 :root {
+  --neutral-light-white: #FFFFFF;
   --neutral-light-300: #dedede;
   --neutral-dark-600: #9F9F9F;
   --neutral-dark-700: #7d7d7d;
   --neutral-dark-800: #4B4B4B;
   --neutral-dark-black: #000000;
+  --green-base-500: #2BC9BA;
 }
 
 body {
@@ -47,13 +49,14 @@ body {
   border-radius: 6px;
   padding: 12px 13px;
   gap: 8px;
+  position: relative;
 }
 
 .form-container:hover {
   box-shadow: 0 0 0 3px var(--neutral-light-300) inset;
 }
 
-.form-container:active,
+.form-container:focus-within,
 .form-container.typing,
 .form-container.searching {
   box-shadow: 0 0 0 1px var(--neutral-dark-600) inset;
@@ -95,6 +98,38 @@ body {
 
 .input-text::placeholder {
   color: var(--neutral-dark-600);
+}
+
+.dropdown {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  height: 164px;
+  overflow: auto;
+  margin-top: 4px;
+  padding: 9px 5px;
+  background-color: var(--neutral-light-white);
+  border-radius: 5px;
+  border: 1px solid var(--neutral-light-300);
+  box-shadow: 0px 0px 1px rgba(50, 50, 50, 0.05), 0px 2px 4px rgba(50, 50, 50, 0.1);
+}
+
+.dropdown-item {
+  list-style: none;
+  padding: 6px 12px;
+  display: flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.dropdown-item>.text {
+  white-space: break-spaces;
+}
+
+.dropdown-item>.same {
+  color: var(--green-base-500);
 }
 
 .btn-plus {
