--- a/src/App.css
+++ b/src/App.css
@@ -121,8 +121,12 @@ body {
   box-shadow: 0px 0px 1px rgba(50, 50, 50, 0.05), 0px 2px 4px rgba(50, 50, 50, 0.1);
 }
 
-.dropdown-item {
+.item-container {
   list-style: none;
+}
+
+.dropdown-item {
+  width: 100%;
   padding: 6px 12px;
   display: flex;
   overflow: hidden;
@@ -130,6 +134,9 @@ body {
   white-space: nowrap;
   cursor: pointer;
   border-radius: 3px;
+  background: transparent;
+  border: none;
+  outline: none;
 }
 
 .dropdown-item:hover {
